# Vision

./: vcpkg.json
docs/: ARCHITECTURE.md
python/ai/: __init__.py  scene_detector.py
python/ipc/: protocol.py
python/tests/: test_control_room.py  test_design_panel.py  test_monitoring_panel.py  test_packaging.py  test_recognition_panel.py  test_scene_change_message.py  test_scene_detector.py
sdk/include/visioncast_sdk/: magewell_device.h  magewell_input.h
sdk/src/: magewell_device.cpp  magewell_input.cpp
ui/: CMakeLists.txt  README.md
ui/include/visioncast_ui/: qml_bridge.h
ui/qml/: Main.qml  qml.qrc
ui/qml/components/: AccordionSection.qml  PanelManager.qml  RightPanelContainer.qml  VCMetricGauge.qml  VCOverlayPreview.qml  VCSearchField.qml  VCSectionHeader.qml
ui/qml/panels/: AIPanel.qml  AboutPanel.qml  BroadcastPanel.qml  ChannelPanel.qml  EffectsPanel.qml  GraphicsPanel.qml  HelpPanel.qml  LiveOutputView.qml  MultiStreamPanel.qml  OverlayPanel.qml  SettingsPanel.qml  SourcePanel.qml  StreamingPanel.qml  TalentPanel.qml  ToolsPanel.qml  ViewPanel.qml
ui/qml/theme/: VCTheme.qml
ui/src/: qml_bridge.cpp
